[tool.poetry]
name = "heroku-scheduled-scaling"
version = "0.0.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
heroku3 = "^5.2.1"
sentry-sdk = "^2.23.1"
pyparsing = "^3.2.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.1"
pytest = "^8.3.5"
hypothesis = "^6.130.0"
time-machine = "^2.16.0"
mypy = "^1.15.0"
types-requests = "^2.32.0.20250306"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
heroku-scheduled-scaling = "heroku_scheduled_scaling.__main__:main"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "B", "A", "C4", "T20"]
ignore = ["E501"]

[tool.mypy]
mypy_path = "stubs"
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true
strict_optional = true
implicit_optional = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true
