[tool.poetry]
name = "heroku-scheduled-scaling"
version = "0.0.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
heroku3 = "^5.2.1"
sentry-sdk = "^1.37.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
pytest = "^7.4.3"
black = "^23.11.0"
hypothesis = "^6.91.0"
time-machine = "^2.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
heroku-scheduled-scaling = "heroku_scheduled_scaling.__main__:main"

[tool.ruff]
select = ["E", "F", "I", "W", "N", "B", "A", "C4", "T20"]
ignore = ["E501"]
